hushan: add missing /persist and security fix to init
Change-Id: I47f3885af3ce001b5483e0182ebb89dd8c7f247e

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -32,6 +32,8 @@
 import init.target.rc
 
 on init
+    # Set permissions for persist partition
+    mkdir /persist 0771 system system
     mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage/emulated 0555 root root
 
@@ -188,6 +190,10 @@ on post-fs-data
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
 
+    # Mounting of persist is moved to 'on emmc-fs' and 'on fs' sections
+    # We chown/chmod /persist again so because mount is run as root + defaults
+    chown system system /persist
+    chmod 0771 /persist
     chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
